<resources>
    <string name="app_name">Wrappy Messenger</string>
    <string name="maps_api_key" translatable="false">AIzaSyAFF5dJMBBoYKYd3nyOlE5gjSJyBAc7ky4</string>
    <string name="user_id">User ID</string>
    <string name="log_in">Login</string>
    <string name="link_login"><u>Login</u></string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="error_invalid_user_id">Please input User ID</string>
    <string name="error_invalid_phone_number">Invalid phone number. Please try again.</string>
    <string name="label_forgot_user_id"><u>Forgot User ID?</u></string>
    <string name="error_incorrect_password">Invalid password. Please try again.</string>
    <string name="label_input_new_password">Input new password</string>
    <string name="label_confirm_password">Confirm password</string>
    <string name="change_password_guide_pass">*Please set with 6 or more letters. *The symbols you can use are /  ? _ + *</string>
    <string name="reg_smsver_5_digit_verification">Please check email or your message fill \n your Passcode</string>
    <string name="reg_smsver_mobile_phone_format">%1$s%2$s</string>
    <string name="reg_smsver_incorrect_verification_code_please_try_again">Wrong code. Please try again</string>
    <string name="reg_question_choose_security_question">Choose your security question</string>
    <string name="reg_password_input_password">Input your password</string>
    <string name="reg_password_confirm_password">Confirm password</string>
    <string name="home_chat_welcome">Time to start using Wrappy</string>
    <string name="delete_account">Delete account</string>
    <string name="status_online">Online</string>
    <string name="status_offline">Offline</string>
    <string name="select_security_question">Select security question</string>
    <string name="question1">What is your mother\'s maiden name?</string>
    <string name="question2">What is your favorite food?</string>
    <string name="question3">What town are you born?</string>
    <string name="reg_question_your_answer">Input your answer (must be 1 to 8 character)</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="your_email">your_email@example.com</string>
    <string name="password">Password</string>
    <string name="reg_smsver_toolbar_title">SMS Verification</string>
    <string name="reg_toolbar_title">Register</string>
    <string name="registration">Registration</string>
    <string name="reg_profile_toolbar_title">Profile</string>
    <string name="login_toolbar_title">@string/log_in</string>
    <string name="forgot_toolbar_title">Forgot Password</string>
    <string name="welcome_label_start">Start Messaging</string>
    <string name="welcome_label_terms">Terms and Condition</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reg_smsver_send_again">Send SMS to phone number</string>
    <string name="reg_smsver_title">We have sent a message to</string>
    <string name="reg_smsver_auth_note">*SMS authenticaton code can be issued up to three times per day</string>
    <string name="reg_password_error">Invalid password. Please try again.</string>
    <string name="forgot_reset_password">Reset Password</string>
    <string name="forgot_security_title">Answer your secret question</string>
    <string name="forgot_answer_label">Forgot your answer?</string>
    <string name="forgot_attempt_note">Account will be locked if you make mistake three times</string>
    <string name="home_nav_button_contacts">Contacts</string>
    <string name="home_nav_button_chat">Chats</string>
    <string name="home_nav_button_profile">My Page</string>
    <string name="choose_question">Select security question</string>
    <string name="select_region">Select Region</string>
    <string name="reg_profile_email_label">Email*</string>
    <string name="reg_profile_mobile_label">Mobile phone*</string>
    <string name="reg_profile_user_id_label">User ID*</string>
    <string name="reg_profile_name_label">Name*</string>
    <string name="reg_profile_name_label_hint">(Please enter from 1 to 8 characters)</string>
    <string name="reg_profile_user_id_label_hint">(Please enter from 6 to 48 alphanumeric characters)</string>
    <string name="forgot_username_send_button">Send</string>
    <string name="home_profile_edit_button">Open Profile</string>
    <string name="forgot_answer_text_description">Please enter the currently registered email \naddress. Send email for reconfiguration to the \nemail you sent.</string>
    <string name="forgot_answer_button_text_submit">Get Email for Reconfiguration</string>
    <string name="forgot_answer_edittext_hint_email">Input your registered Email address</string>
    <string name="forgot_answer_text_error">Invalid email address</string>
    <string name="menu_stock_image_gallery_choose">Choose</string>
    <string name="about_faq_title">FAQ</string>
    <string name="about_faq_url">http://help.wrappy.net/en/</string>
    <string name="about_support_title">Contact to Support</string>
    <string name="about_support_url">https://help.wrappy.net/feedback/</string>
    <string name="email_regex" translatable="false">^[A-Z0-9a-z\\._+-]+@([A-Za-z0-9-]+\\.)+[A-Za-z]{2,4}$</string>
    <string-array name="login_spinner_country_list" translatable="false">
        <item>JP</item>
        <item>CN</item>
        <item>PH</item>
        <item>KR</item>
        <item>TW</item>
    </string-array>
    <string-array name="intro_page_image" translatable="false">
        <item>logo</item>
        <item>intro2</item>
        <item>intro3</item>
        <item>intro4</item>
        <item>intro5</item>
        <item>intro8</item>
        <item>intro9</item>
        <item>intro10</item>
        <item>intro11</item>
    </string-array>
    <string-array name="intro_page_title">
        <item />
        <item>Free</item>
        <item>Cloud</item>
        <item>Safety</item>
        <item>Convenience</item>
        <item>Privacy</item>
        <item>Ecology</item>
        <item>Wallet</item>
        <item>Revolution</item>
    </string-array>
    <string-array name="intro_page_description">
        <item>Flattening the World. \nThis is the next-generation SNS platform.</item>
        <item>Wrappy is free to use voice calls, \nvideo calls and TV conference.</item>
        <item>Wrappy allows you to access your \nmessages from multiple devices</item>
        <item>The message is fully encrypted and \ncan self destruct.</item>
        <item>Easy to send and receive Cryptocurrencies \nbetween friends and family</item>
        <item>Security using the encryption system</item>
        <item>A simple cryptocurrency ecosystem</item>
        <item>The Cryptocurrencies can be used anytime, \nin any countries</item>
        <item>A pioneer in an innovative &amp; constantly \nevolving era</item>
    </string-array>
    <string name="misc_dialog_welcome_message1">Welcome to Wrappy</string>
    <string name="misc_dialog_welcome_message2">Enjoy Wrappy</string>
    <string name="done">Done</string>
    <string name="reg_question_hint_label1">*Required. Please enter from 1 to 8 characters.</string>
    <string name="security_forgot_password_logout_message">You\'ll be logged out, are you sure?</string>
    <string name="about_text_description">Flattening the World.\nThis is the next-generation SNS platform.</string>
    <string name="security_label_change_secret_question">Change Security Question</string>
    <string name="security_label_change_password">Change Text Password</string>
    <string name="security_label_pattern_switch">Pattern Input</string>
    <string name="security_label_register_pattern">Register Pattern</string>
    <string name="security_label_blocked_users">Block List</string>
    <string name="welcome_dialog_title_terms">Terms and Conditions</string>
    <string name="forgot_answer_button_text_back_top">Back to TOP</string>
    <string name="forgot_answer_email_sent_desc">We sent a reconfiguration message to \nthe email address you\'ve provided. Please \n reconfigure it from the URL address we sent.</string>
    <string name="qr_button_label">QR code reader</string>
    <string name="pattern_error_incorrect">Incorrect pattern. Please try again.</string>
    <string name="permission_dialog_image_crop_title">Needs Permissions</string>
    <string name="permission_dialog_image_crop_desc">To use this feature, allow Wrappy to access your device\'s camera, photos, media and files.</string>
    <string name="permission_dialog_go_to_settings">Go to settings</string>
    <string name="security_page_title_block_list">Block List</string>
    <string name="security_dialog_msg_unblock_success">Successfully unblocked.</string>
    <string name="security_dialog_title_unblock">Are you sure you want to unblock this user?</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="login_hint_phone_number">Phone number</string>
    <string name="forgot_userid_text_description">Please enter your email and your\n phone number</string>
    <string name="dialog_retry">Retry</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="forgot_userid_label_phone_number">Phone No.</string>
    <string name="forgot_userid_title">Forgot User ID</string>
    <string name="forgot_userid_dialog_text_sent">Message has sent to your mobile and email</string>
    <string name="login_title_password">@string/password</string>
    <string name="login_password_field_hint">@string/password</string>
    <string name="login_password_error_try_again">Your account was locked. Please try again later.</string>
    <string name="login_password_error_locked">%1$s. Please contact our customer service.</string>
    <string name="reg_label_question_1">Question 1*</string>
    <string name="reg_label_question_2">Question 2</string>
    <string name="reg_label_question_3">Question 3</string>
    <string name="reg_profile_image_dialog_choose_avatar">Choose from Avatar</string>
    <string name="reg_profile_image_dialog_select">Select Photo</string>
    <string name="reg_profile_image_dialog_new">Take a New Photo</string>
    <string name="image_crop_submit">Submit</string>
    <string name="home_contact_add_friend">Add Friends</string>
    <string name="home_contact_add_friend_hint">Tap to Add friend</string>
    <string name="home_contact_div_title">Wrappy Contacts</string>
    <string name="home_contact_search_id">Search ID</string>
    <string name="home_contact_read_qr">Read QR code</string>
    <string name="home_contact_show_qr">Show my QR code</string>
    <string name="qr_title">My QR Code</string>
    <string name="contact_add_friend_title">Add Friends</string>
    <string name="contact_add_send_request">Send friend request</string>
    <string name="contact_add_already_sent">You\'ve already sent a friend request</string>
    <string name="contact_add_received_request">This user sent you friend request</string>
    <string name="contact_add_already_friend">This user is already your friend</string>
    <string name="action_delete">Delete</string>
    <string name="input_your_password">Input your password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="link_pattern_register"><u>Pattern Registration</u></string>
    <string name="create_a_password">Create a password</string>
    <string name="take_a_new_photo">Take a new Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_password">Confirm Password</string>
</resources>