<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/reg_profile_image_textview_take"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/regProfileDialog"
        android:text="@string/take_a_new_photo"/>

    <TextView
        android:id="@+id/reg_profile_image_textview_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/regProfileDialog"
        android:text="@string/select_photo"/>

    <TextView
        android:id="@+id/reg_profile_image_textview_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/regProfileDialog"
        android:text="@string/cancel" />

</LinearLayout>
