<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/reg_password_textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:text="@string/label_input_new_password"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10" />

    <TextView
        android:id="@+id/reg_password_textview_pass"
        style="@style/passwordLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/create_a_password"
        app:layout_constraintTop_toBottomOf="@id/reg_password_textview_title" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_password_edittext_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:saveEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_password_textview_pass"
        app:passwordToggleDrawable="@drawable/ic_password_toggle"
        app:passwordToggleEnabled="true">

        <com.wrappy.android.common.ui.WrappyFilteredEditText
            android:id="@+id/reg_password_edittext_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="12dp"
            android:textSize="14dp"
            android:hint="@string/reg_password_input_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/reg_password_textview_confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/passwordLabel"
        android:text="@string/reg_password_confirm_password"
        app:layout_constraintTop_toBottomOf="@+id/reg_password_edittext_holder"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_password_edittext_confirm_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:saveEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_password_textview_confirm_pass"
        app:passwordToggleDrawable="@drawable/ic_password_toggle"
        app:passwordToggleEnabled="true">

        <com.wrappy.android.common.ui.WrappyFilteredEditText
            android:id="@+id/reg_password_edittext_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="12dp"
            android:textSize="14dp"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/reg_password_textview_error_password"
        style="@style/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_password_edittext_confirm_holder" />

    <Button
        android:id="@+id/reg_password_button_next"
        style="@style/mainButton"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textAllCaps="true"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_password_textview_error_password"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
