<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/sec_changepass_textview_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="42dp"
        android:paddingBottom="24dp"
        android:text="@string/label_input_new_password"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sec_changepass_textview_new_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_a_password"
        style="@style/passwordLabel"
        app:layout_constraintTop_toBottomOf="@id/sec_changepass_textview_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sec_changepass_edittext_new_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:passwordToggleDrawable="@drawable/ic_password_toggle"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sec_changepass_textview_new_pass"
        app:passwordToggleEnabled="true">

        <com.wrappy.android.common.ui.WrappyFilteredEditText
            android:id="@+id/sec_changepass_edittext_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="12dp"
            android:textSize="14dp"
            android:textColorHint="#ACACAC"
            android:hint="@string/input_your_password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/sec_changepass_textview_confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        style="@style/passwordLabel"
        app:layout_constraintTop_toBottomOf="@id/sec_changepass_edittext_new_holder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sec_changepass_edittext_confirm_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:passwordToggleDrawable="@drawable/ic_password_toggle"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sec_changepass_textview_confirm_pass"
        app:passwordToggleEnabled="true">

        <com.wrappy.android.common.ui.WrappyFilteredEditText
            android:id="@+id/sec_changepass_edittext_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="12dp"
            android:textSize="14dp"
            android:textColorHint="#ACACAC"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/sec_changepass_textview_error_password"
        style="@style/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sec_changepass_edittext_confirm_holder" />

    <Button
        android:id="@+id/sec_changepass_button_done"
        style="@style/mainButton"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sec_changepass_textview_error_password"
        app:layout_constraintVertical_bias="0.3" />

</android.support.constraint.ConstraintLayout>